@@ -38,6 +38,8 @@ type Worker interface {
 	LookupKey(keyid string) (*PubKey, error)
 	// Add ASCII-armored public key
 	AddKey(armoredKey string) ([]string, error)
+	// Get server status
+	Status() (*ServerStatus, error)
 }
 
 type WorkerHandle struct {
@@ -109,6 +111,11 @@ func serveHkp(wh *WorkerHandle) {
 						keys, err = wh.w.LookupKeys(lookup.Search, INDEX_LIMIT)
 					}
 					lookup.Response() <- &IndexResponse{Keys: keys, Err: err, Lookup: lookup}
+				case Status:
+					status, err := wh.w.Status()
+					status.Hostname = lookup.Hostname
+					status.Port = lookup.Port
+					lookup.Response() <- &StatusResponse{Status: status, Err: err}
 				default:
 					lookup.Response() <- &NotImplementedResponse{}
 				}
