@@ -21,7 +21,7 @@
 {{end}}
 
 {{define "layout"}}
-{{template "top"}}
-{{template "page_content"}}
-{{template "bottom"}}
+{{template "top" .}}
+{{template "page_content" .}}
+{{template "bottom" .}}
 {{end}}
